--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 html {
+  background-color: #1f1d2c;
   line-height: 1.5;
   box-sizing: border-box;
-  scroll-behavior: smooth;
   color: #fff;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -170,8 +170,6 @@ img {
 .home {
   background-color: #1f1d2c;
   padding: 0 5px;
-  grid-template-columns: 1fr;
-  grid-template-rows: 200px auto;
 }
 .home__content {
   flex-direction: column;
@@ -224,6 +222,58 @@ img {
 .home__icons {
   gap: 1.5rem;
 
+}
+
+@media (min-width: 768px) {
+  .home {
+    border: 1px solid red ;
+    background-color: #1f1d2c;
+    margin: 0; 
+    grid-template-columns: auto auto auto;
+    grid-template-rows: 1fr ;
+  }
+  .home__content {
+    display: flex;
+    border: 1px solid green;
+    flex-direction: row;
+  }
+  
+  .home__info {
+    border: 1px solid brown;
+    flex-direction: column;
+    align-items:baseline;
+    align-self: flex-start;
+  }
+    
+  .home__image {
+    border: 1px solid yellow;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .home__name {  
+    border: 1px solid salmon;
+    font-size: 55px;
+    font-weight: 700;
+  }
+  .home__description {
+    border: 1px solid purple;
+    font-size: 23px;
+    font-weight: 400;
+  }
+  
+  .home__social {
+    border: 1px solid blue;  
+  }
+  
+  .home__social span {
+    color: #f1a600;
+  }
+  
+  .home__icons {
+    gap: 1.5rem;
+  }
+  
 }
 
 /** About */
