--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ img {
   color: #e5e5e5;
   background-color: #1f1d2c;
   z-index: 1;
-  transition: all .3s ease;
+  transition: all .2s ease;
 }
 
 .navbar__container {
@@ -61,7 +61,6 @@ img {
 
 .menu {
   width: 100%;
-  background-color: #1f1d2c;
   margin-right: 10px;
   z-index: 2;
 }
@@ -94,8 +93,8 @@ img {
     left: 0;
     width: 100%;
     background-color: #1f1d2c;
-    padding: 40px 0 40px;
-    transition: all .3s ease;
+    padding: 60px 0 50px;
+    transition: all .2s ease-in;
   }
 
   .menu.show--menu {
@@ -109,13 +108,13 @@ img {
   .menu--close {
     position: absolute;
     display: inline-block;
-    top: 20px;
-    right: 20px;
+    top: 25px;
+    right: 35px;
     cursor: pointer;
   }
 
   .menu--open {
-    margin-right: 20px;
+    margin-right: 30px;
     cursor: pointer;
   }
 }
@@ -168,7 +167,6 @@ img {
 /** home */
 
 .home {
-  background-color: #1f1d2c;
   padding: 0 5px;
 }
 .home__content {
@@ -227,10 +225,10 @@ img {
 @media (min-width: 768px) {
   .home {
     border: 1px solid red ;
-    background-color: #1f1d2c;
+    /* background-color: #1f1d2c; */
     margin: 0; 
     grid-template-columns: auto auto auto;
-    grid-template-rows: 1fr ;
+    grid-template-rows: auto ;
   }
   .home__content {
     display: flex;
@@ -279,27 +277,23 @@ img {
 /** About */
 .about {
   border: 1px solid rgb(138, 108, 140);
-  background-color: #1f1d2c;
   padding: 5rem 20px;
 }
 
 /** Experience */
 .experience {
   border: 1px solid rgb(47, 0, 255);
-  background-color: #1f1d2c;
   padding: 5rem 20px;
 }
 
 /** Projects */
 .projects {
   border: 1px solid rgb(242, 0, 255);
-  background-color: #1f1d2c;
   padding: 5rem 20px;
 }
 
 /** Contact */
 .contact {
   border: 1px solid rgb(138, 108, 140);
-  background-color: #1f1d2c;
   padding: 5rem 20px;
 }
