--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,11 @@ html {
   box-sizing: border-box;
   color: #fff;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  scroll-behavior: smooth;
 }
 
 :root {
-  --navbar-height: 80px;
+  --navbar-height: 4rem;
 }
 
 *,
@@ -42,9 +43,9 @@ img {
   width: 100%;
   height: var(--navbar-height);
   color: #e5e5e5;
-  background-color: #1f1d2c;
   z-index: 1;
   transition: all .2s ease;
+  background-color: #1f1d2c;
 }
 
 .navbar__container {
@@ -58,15 +59,14 @@ img {
   justify-content: end;
 }
 
-
 .menu {
   width: 100%;
-  margin-right: 10px;
+  margin-right: 1rem;
   z-index: 2;
 }
 
 .menu__icon {
-  font-size: 28px;
+  font-size: 2rem;
 }
 
 .menu__list {
@@ -85,7 +85,7 @@ img {
   color: #f1a600;
 }
 
-/* hasta los 500, 0 - 500 */
+/* hasta los 768PX, 0 - 768 */
 @media (max-width: 768px) {
   .menu {
     position: fixed;
@@ -93,8 +93,8 @@ img {
     left: 0;
     width: 100%;
     background-color: #1f1d2c;
-    padding: 60px 0 50px;
-    transition: all .2s ease-in;
+    padding: 3rem 0 3rem;
+    transition: all .1s ease-in;
   }
 
   .menu.show--menu {
@@ -103,25 +103,27 @@ img {
 
   .menu__list {
     flex-direction: column;
+    margin: 1rem;
   }
 
   .menu--close {
     position: absolute;
     display: inline-block;
-    top: 25px;
-    right: 35px;
+    top: 1.5rem;
+    right: 2.5rem;
     cursor: pointer;
   }
 
   .menu--open {
-    margin-right: 30px;
+    margin-top: 1.5rem;
+    margin-right: 2.5rem;
     cursor: pointer;
   }
 }
 
 @media (min-width: 768px) {
   :root {
-    --navbar-height: 80px;
+    --navbar-height: 5rem;
   }
 
   .menu--close {
@@ -130,9 +132,8 @@ img {
 
   .menu__list {
     justify-content: end;
-    margin-right: 15px;
-    align-items: center;
-    gap: 1rem;
+    font-size: 1.2rem;
+    gap: 4rem;
   }
 
   .menu--open {
@@ -140,7 +141,6 @@ img {
   }
 }
 
-/** Main */
 .wrapper {
   max-width: 1024px;
   margin: 0 auto;
@@ -164,10 +164,11 @@ img {
   display: grid;
 }
 
-/** home */
 
+@media (max-width: 768px) {
+/** home */
 .home {
-  padding: 0 5px;
+  padding: 2rem;
 }
 .home__content {
   flex-direction: column;
@@ -179,8 +180,7 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  top: 0;
-  gap: 12px;
+  gap: 1.2rem;
 }
 
 .home__info p {
@@ -189,28 +189,28 @@ img {
 }
 
 .home__image {
-  padding-top: 30px;
-  width: 220px;
-  height: 220px;
+  padding-top: 2rem;
+  width: 15rem;
+  height: 15rem;
 }
 
 .home__name{ 
   margin: 0;
-  font-size: 55px;
-  font-weight: 700;
+  font-size: 4rem;
+  font-weight: 600;
 }
 .home__description {
   margin: 0;
-  font-size: 23px;
+  font-size: 1.4rem;
   font-weight: 400;
 }
 
 .home__social {
   justify-content: center;
-  margin: 30px;
-  font-size: 16px;
+  margin: 2rem; 
   font-weight: 400;
   text-align: center;
+  gap: 1rem;
 }
 
 .home__social span {
@@ -219,71 +219,98 @@ img {
 
 .home__icons {
   gap: 1.5rem;
-
 }
 
-@media (min-width: 768px) {
-  .home {
-    border: 1px solid red ;
-    /* background-color: #1f1d2c; */
-    margin: 0; 
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto ;
-  }
-  .home__content {
-    display: flex;
-    border: 1px solid green;
-    flex-direction: row;
-  }
-  
-  .home__info {
-    border: 1px solid brown;
-    flex-direction: column;
-    align-items:baseline;
-    align-self: flex-start;
-  }
-    
-  .home__image {
-    border: 1px solid yellow;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .home__name {  
-    border: 1px solid salmon;
-    font-size: 55px;
-    font-weight: 700;
-  }
-  .home__description {
-    border: 1px solid purple;
-    font-size: 23px;
-    font-weight: 400;
-  }
-  
-  .home__social {
-    border: 1px solid blue;  
-  }
-  
-  .home__social span {
-    color: #f1a600;
-  }
-  
-  .home__icons {
-    gap: 1.5rem;
-  }
-  
-}
-
-/** About */
 .about {
-  border: 1px solid rgb(138, 108, 140);
-  padding: 5rem 20px;
+  color: #e5e5e5;
+  background-color: #242635;
+  padding: 2rem 3rem;
+}
+
+.about__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4rem;
+}
+.about__info {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.about__info h2 {
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
+.about__info p {
+  font-size: 1rem;
+}
+
+.about__icons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  gap: 4rem;
+}
+
+.about__icons img {
+width: 4rem;
+height: 4rem;
+}
+
+.about__icons span{
+  font-weight: 700;
 }
 
 /** Experience */
 .experience {
-  border: 1px solid rgb(47, 0, 255);
-  padding: 5rem 20px;
+  color: #e5e5e5;
+  background-color: #1f1d2c;
+  padding: 2rem 3rem;
+}
+
+.experience__content {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 2rem;
+  align-self: flex-start;
+  font-size: 0.7rem;
+}
+
+.experience h2 {
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
+.experience1, 
+.experience2,
+.experience3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.experience__description {
+  align-self: start;
+}
+
+.experience__description span{
+  font-weight: 700;
+  font-size: 1rem;
+}
+
+.experience img {
+  width: 4rem;
+  height: 4rem;
+}
+.years {
+    font-size: 1rem;
+    font-weight: 600;
 }
 
 /** Projects */
@@ -297,3 +324,92 @@ img {
   border: 1px solid rgb(138, 108, 140);
   padding: 5rem 20px;
 }
+}
+
+@media (min-width: 768px) {
+  .home {
+    padding: 1rem;
+    border: 1px solid red;
+  }
+
+  .home__content {
+    display: grid;
+    /* border: 3px dashed green; */
+    grid-template-columns: repeat(2, 1fr);
+    text-align: initial;
+  }
+  
+  .home__info {
+    padding-left: 4rem;
+    flex-direction: column;
+    text-align: start;
+    grid-row: 1/2;
+    grid-column: 1/2;
+    /* border: 4px solid rgb(42, 165, 95); */
+  }
+    
+  .home__name {  
+    /* border: 1px solid salmon; */
+    margin: 0;
+    font-size: 4rem;
+    font-weight: 600;
+  }
+
+  .home__description {
+    /* border: 1px solid purple; */
+    font-size: 1.8rem;
+    font-weight: 400;
+  }
+  
+  .home__image {  
+    grid-column: 2/3;
+    grid-row: 1/4;
+    width: 25rem;
+    /* border: 1px solid blue; */
+  }
+  
+  .home__social {
+    position: relative;
+    padding-left: 4rem;
+    font-size: 1.5rem;
+    /* border: 1px solid blue; */
+    }
+  
+  .home__social span {
+    color: #f1a600;
+  }
+  
+  .home__icons {
+    gap: 3rem;
+  } 
+  .home__icons img {
+    width: 3rem;
+  }
+
+  /** About */
+  .about {
+    border: 1px solid rgb(138, 108, 140);
+    padding: 5rem 20px;
+  }
+  
+  /** Experience */
+  .experience {
+    display: flex;
+    border: 1px solid rgb(47, 0, 255);
+    padding: 5rem 20px;
+  }
+
+  /** Projects */
+  .projects {
+    border: 1px solid rgb(242, 0, 255);
+    padding: 5rem 20px;
+  }
+
+  /** Contact */
+  .contact {
+    border: 1px solid rgb(138, 108, 140);
+    padding: 5rem 20px;
+  }
+}
+
+
