--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 :root {
-  --navbar-height: 4rem;
+  --navbar-height: 5rem;
 }
 
 *,
@@ -36,6 +36,13 @@ img {
   width: 100%;
 }
 
+footer {
+  text-align: center;
+  margin: 1.5rem;
+  font-weight: 600;
+  color: #e5e5e5;
+
+}
 /** Navbar */
 .navbar {
   position: fixed;
@@ -66,7 +73,7 @@ img {
 }
 
 .menu__icon {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .menu__list {
@@ -109,13 +116,13 @@ img {
   .menu--close {
     position: absolute;
     display: inline-block;
-    top: 1.5rem;
+    top: 1rem;
     right: 2.5rem;
     cursor: pointer;
   }
 
   .menu--open {
-    margin-top: 1.5rem;
+    margin-top: .9rem;
     margin-right: 2.5rem;
     cursor: pointer;
   }
@@ -269,10 +276,11 @@ height: 4rem;
 .experience {
   color: #e5e5e5;
   background-color: #1f1d2c;
-  padding: 2rem 3rem;
+  padding: 2rem 2rem;
 }
 
 .experience__content {
+  margin-bottom: 3rem;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -282,7 +290,7 @@ height: 4rem;
 }
 
 .experience h2 {
-  font-size: 2.5rem;
+  font-size: 2.7rem;
   font-weight: 600;
 }
 
@@ -309,32 +317,65 @@ height: 4rem;
   height: 4rem;
 }
 .years {
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: 600;
 }
 
 /** Projects */
 .projects {
-  border: 1px solid rgb(242, 0, 255);
-  padding: 5rem 20px;
+  padding: 2rem 2rem
 }
+
+.project__content {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 1rem;
+  }
+
+  .projects h2 {
+    font-size: 2.5rem;
+    font-weight: 600;
+  }
 
 /** Contact */
 .contact {
-  border: 1px solid rgb(138, 108, 140);
-  padding: 5rem 20px;
+  padding: 2rem 3rem;
+  background-color: #242635;
+  }
+
+  .contact__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .contact img {
+    width: 4rem;
+  }
+
+  .contact h2 {
+    font-size: 2.5rem;
+    font-weight: 600;
+  }
+
+  .phone span, 
+  .mail span {
+    font-size: 1.2rem;
+    font-weight: 600;
+  }
 }
-}
+
+/** VERSION WEB*/
 
 @media (min-width: 768px) {
   .home {
     padding: 1rem;
-    border: 1px solid red;
   }
 
   .home__content {
     display: grid;
-    /* border: 3px dashed green; */
     grid-template-columns: repeat(2, 1fr);
     text-align: initial;
   }
@@ -345,18 +386,15 @@ height: 4rem;
     text-align: start;
     grid-row: 1/2;
     grid-column: 1/2;
-    /* border: 4px solid rgb(42, 165, 95); */
   }
     
   .home__name {  
-    /* border: 1px solid salmon; */
     margin: 0;
     font-size: 4rem;
     font-weight: 600;
   }
 
   .home__description {
-    /* border: 1px solid purple; */
     font-size: 1.8rem;
     font-weight: 400;
   }
@@ -364,15 +402,13 @@ height: 4rem;
   .home__image {  
     grid-column: 2/3;
     grid-row: 1/4;
-    width: 25rem;
-    /* border: 1px solid blue; */
+    width: 30rem;
   }
   
   .home__social {
     position: relative;
     padding-left: 4rem;
     font-size: 1.5rem;
-    /* border: 1px solid blue; */
     }
   
   .home__social span {
@@ -388,21 +424,104 @@ height: 4rem;
 
   /** About */
   .about {
-    border: 1px solid rgb(138, 108, 140);
-    padding: 5rem 20px;
+    padding: 5rem 2rem;
+    width: 100%;
+    height: auto;
+    background-color: #242635;
   }
-  
+
+  .about__content {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .about__info {
+    margin: 2rem 2rem;
+  }
+
+  .about__title {
+    font-size: 3rem;
+    font-weight: 600;
+  }
+
+  .about__description {
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+
+  .about__icons {
+    display: flex;
+    justify-content: space-around;
+    width: 95%;
+    margin: 1rem;
+    gap: 2;
+  }
+
+  .about__icons img {
+    width: 8.5rem;
+    height: 9.5rem;
+  }
+
+
   /** Experience */
   .experience {
+    color: #e5e5e5;
+    background-color: #1f1d2c;
+    padding: 2rem 2rem;
+  }
+  
+  .experience__content {
+    margin: 5rem;
     display: flex;
-    border: 1px solid rgb(47, 0, 255);
-    padding: 5rem 20px;
+    flex-direction: column;
+    text-align: center;
+    gap: 1rem;
+    align-self: flex-start;
+    font-size: 1rem;
+  }
+  
+  .experience h2 {
+    font-size: 2.7rem;
+    font-weight: 600;
+  }
+  
+  .experience1, 
+  .experience2,
+  .experience3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .experience__description {
+    align-self: start;
+  }
+  
+  .experience__description span{
+    font-weight: 700;
+    font-size: 1.5rem;
+  }
+  
+  .experience img {
+    width: 4rem;
+    height: 4rem;
+  }
+  .years {
+      font-size: 1.3rem;
+      font-weight: 600;
   }
 
   /** Projects */
   .projects {
     border: 1px solid rgb(242, 0, 255);
     padding: 5rem 20px;
+  }
+
+  .project__content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
   }
 
   /** Contact */
