--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,7 @@ footer {
 }
 
 .menu {
+  
   width: 100%;
   margin-right: 1rem;
   z-index: 2;
@@ -514,20 +515,77 @@ height: 4rem;
 
   /** Projects */
   .projects {
-    border: 1px solid rgb(242, 0, 255);
     padding: 5rem 20px;
   }
 
   .project__content {
+    background-color: #242635;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
   }
+  .projects h2 {
+    display: flex;
+    font-size: 2.5rem;
+    font-weight: 600;
+    justify-content: center;
+  }
 
   /** Contact */
   .contact {
-    border: 1px solid rgb(138, 108, 140);
     padding: 5rem 20px;
+  }
+
+  .contact__title {
+    display: flex;
+    justify-content: center;
+    font-size: 2.5rem;
+    font-weight: 600;
+  }
+
+  .contact__items {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-left: 15rem;
+  }
+
+  .phone {
+    display: flex;
+    flex-direction: column;
+    width: 8rem;
+    text-align: center;
+  }
+  .mail {
+    display: flex;
+    flex-direction: column;
+    width: 8rem;
+    text-align: center;
+  } 
+  
+  .phone span {
+    font-size: 1rem;
+    text-align: center;
+    font-weight: 700;
+    color: #fff;
+  }
+  
+  .phone p {
+    font-size: 0.7rem; 
+    font-weight: 600;
+    color: grey;
+  }
+
+  .mail span {
+    font-size: 1rem;
+    text-align: center;
+    font-weight: 700;
+    color: #fff;
+  }
+  
+  .mail p {
+    font-size: 0.7rem; 
+    font-weight: 600;
+    color: grey;
   }
 }
 
