--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ html {
   line-height: 1.5;
   box-sizing: border-box;
   color: #fff;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Inter', sans-serif;;
   scroll-behavior: smooth;
 }
 
