--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,14 @@
 html {
   background-color: #1f1d2c;
-  line-height: 1.5;
+  /* line-height: 1.5; */
   box-sizing: border-box;
   color: #fff;
-  font-family: 'Inter', sans-serif;;
+  font-family: 'Poppins', sans-serif;
   scroll-behavior: smooth;
 }
 
 :root {
-  --navbar-height: 5rem;
+  --navbar-height: 4rem;
 }
 
 *,
@@ -34,6 +34,7 @@ a:hover {
 img {
   max-width: 100%;
   width: 100%;
+  border-radius: 2rem;
 }
 
 footer {
@@ -43,6 +44,7 @@ footer {
   color: #e5e5e5;
 
 }
+
 /** Navbar */
 .navbar {
   position: fixed;
@@ -67,7 +69,6 @@ footer {
 }
 
 .menu {
-  
   width: 100%;
   margin-right: 1rem;
   z-index: 2;
@@ -85,7 +86,7 @@ footer {
 
 .menu__link {
   color: #e5e5e5;
-  font-weight:500;
+  font-weight: 500;
   transition: .2s ease-in-out;
 }
 
@@ -97,11 +98,11 @@ footer {
 @media (max-width: 768px) {
   .menu {
     position: fixed;
-    top: -200%;
+    top: -50%;
     left: 0;
     width: 100%;
     background-color: #1f1d2c;
-    padding: 3rem 0 3rem;
+    padding: 2rem 0 2rem;
     transition: all .1s ease-in;
   }
 
@@ -111,20 +112,20 @@ footer {
 
   .menu__list {
     flex-direction: column;
-    margin: 1rem;
+    margin: 1.5rem;
+    gap: 1.5rem;
   }
 
   .menu--close {
     position: absolute;
     display: inline-block;
-    top: 1rem;
-    right: 2.5rem;
+    top: 1.2rem;
+    right: 1.5rem;
     cursor: pointer;
   }
 
   .menu--open {
-    margin-top: .9rem;
-    margin-right: 2.5rem;
+    margin-right: 2rem;
     cursor: pointer;
   }
 }
@@ -173,165 +174,165 @@ footer {
 }
 
 
-@media (max-width: 768px) {
-/** home */
-.home {
-  padding: 2rem;
-}
-.home__content {
-  flex-direction: column;
-}
+@media (max-width: 769px) {
 
-.home__info {
-  width: 100%;
-  height: inherit;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1.2rem;
-}
+  /** home */
+  .home__content {
+    margin: 2rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 1rem;
+  }
 
-.home__info p {
-  display: flex;
-  text-align: center;
-}
+  .home__info {
+    width: 100%;
+    height: inherit;
+    padding: 0 1rem 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
 
-.home__image {
-  padding-top: 2rem;
-  width: 15rem;
-  height: 15rem;
-}
+  .home__name {
+    margin: 0;
+    font-size: 2.6rem;
+    font-weight: 600;
+  }
 
-.home__name{ 
-  margin: 0;
-  font-size: 4rem;
-  font-weight: 600;
-}
-.home__description {
-  margin: 0;
-  font-size: 1.4rem;
-  font-weight: 400;
-}
+  .home__description {
+    padding: 1rem;
+    font-size: 1.2rem;
+    font-weight: 200;
+  }
 
-.home__social {
-  justify-content: center;
-  margin: 2rem; 
-  font-weight: 400;
-  text-align: center;
-  gap: 1rem;
-}
+  .home__image {
+    position: relative;
+    width: 17rem;
+  }
 
-.home__social span {
-  color: #f1a600;
-}
+  .home__social {
+    justify-content: center;
+    font-size: 1.2rem;
+    font-weight: 200;
+    text-align: center;
+  }
 
-.home__icons {
-  gap: 1.5rem;
-}
+  .home__social span {
+    font-weight: 500;
+    color: #f1a600;
+  }
 
-.about {
-  color: #e5e5e5;
-  background-color: #242635;
-  padding: 2rem 3rem;
-}
+  .home__icons {
+    padding: 1rem;
+    gap: 1.5rem;
+  }
 
-.about__content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 4rem;
-}
-.about__info {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}
+  .home__icons img {
+    width: 2.5rem;
+  }
 
-.about__info h2 {
-  font-size: 2.5rem;
-  font-weight: 600;
-}
+  .about {
+    color: #e5e5e5;
+    background-color: #242635;
+    padding: 2rem 2rem;
+  }
 
-.about__info p {
-  font-size: 1rem;
-}
+  .about__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 3rem;
+  }
 
-.about__icons {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  gap: 4rem;
-}
+  .about__title {
+    font-size: 2.5rem;
+    font-weight: 500;
+  }
 
-.about__icons img {
-width: 4rem;
-height: 4rem;
-}
+  .about__description {
+    font-size: .8rem;
+    font-weight: 300;
+  }
 
-.about__icons span{
-  font-weight: 700;
-}
+  .about__icons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    gap: 2.5rem;
+  }
 
-/** Experience */
-.experience {
-  color: #e5e5e5;
-  background-color: #1f1d2c;
-  padding: 2rem 2rem;
-}
+  .about__icons img {
+    width: 4rem;
+  }
 
-.experience__content {
-  margin-bottom: 3rem;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  gap: 2rem;
-  align-self: flex-start;
-  font-size: 0.7rem;
-}
+  .about__icons span {
+    font-weight: 700;
+  }
 
-.experience h2 {
-  font-size: 2.7rem;
-  font-weight: 600;
-}
+  /** Experience */
+  .experience {
+    color: #e5e5e5;
+    background-color: #1f1d2c;
+    padding: 2rem 2rem;
+  }
 
-.experience1, 
-.experience2,
-.experience3 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
+  .experience__content {
+    margin-bottom: 3rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 2rem;
+    align-self: flex-start;
+    font-size: 0.7rem;
+  }
 
-.experience__description {
-  align-self: start;
-}
+  .experience h2 {
+    font-size: 2.7rem;
+    font-weight: 600;
+  }
 
-.experience__description span{
-  font-weight: 700;
-  font-size: 1rem;
-}
+  .experience1,
+  .experience2,
+  .experience3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-.experience img {
-  width: 4rem;
-  height: 4rem;
-}
-.years {
+  .experience__description {
+    align-self: start;
+  }
+
+  .experience__description span {
+    font-weight: 700;
+    font-size: 1rem;
+  }
+
+  .experience img {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .years {
     font-size: 1.3rem;
     font-weight: 600;
-}
+  }
 
-/** Projects */
-.projects {
-  padding: 2rem 2rem
-}
+  /** Projects */
+  .projects {
+    padding: 2rem 2rem
+  }
 
-.project__content {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  gap: 1rem;
+  .project__content {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 1rem;
   }
 
   .projects h2 {
@@ -339,10 +340,10 @@ height: 4rem;
     font-weight: 600;
   }
 
-/** Contact */
-.contact {
-  padding: 2rem 3rem;
-  background-color: #242635;
+  /** Contact */
+  .contact {
+    padding: 2rem 3rem;
+    background-color: #242635;
   }
 
   .contact__content {
@@ -361,7 +362,7 @@ height: 4rem;
     font-weight: 600;
   }
 
-  .phone span, 
+  .phone span,
   .mail span {
     font-size: 1.2rem;
     font-weight: 600;
@@ -372,61 +373,70 @@ height: 4rem;
 
 @media (min-width: 768px) {
   .home {
-    padding: 1rem;
+    margin-bottom: 2rem;
+    padding: 1rem 2rem;
   }
 
   .home__content {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    text-align: initial;
+    grid-template-columns: 2fr 1.5fr;
   }
-  
+
   .home__info {
-    padding-left: 4rem;
     flex-direction: column;
     text-align: start;
     grid-row: 1/2;
     grid-column: 1/2;
   }
-    
-  .home__name {  
-    margin: 0;
-    font-size: 4rem;
+
+  .home__name {
+    font-size: 3.2rem;
     font-weight: 600;
   }
 
   .home__description {
-    font-size: 1.8rem;
-    font-weight: 400;
+    padding: 0.5rem 3rem 1rem 0;
+    font-size: 1.3rem;
+    font-weight: 200;
   }
-  
-  .home__image {  
+
+  .home__image {
     grid-column: 2/3;
     grid-row: 1/4;
     width: 30rem;
   }
-  
+
   .home__social {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
     position: relative;
-    padding-left: 4rem;
-    font-size: 1.5rem;
-    }
-  
+    margin-top: 1rem;
+    padding-right: 3rem;
+    align-items: center;
+    font-size: 1.4rem;
+    font-weight: 300;
+    gap: 2rem
+  }
+
   .home__social span {
     color: #f1a600;
+    font-weight: 600;
   }
-  
+
   .home__icons {
+    justify-content: space-between;
     gap: 3rem;
-  } 
+  }
+
   .home__icons img {
-    width: 3rem;
+    width: 2.7rem;
+    border-radius: 0;
   }
 
   /** About */
   .about {
-    padding: 5rem 2rem;
-    width: 100%;
+    padding: 3rem 2rem;
     height: auto;
     background-color: #242635;
   }
@@ -437,7 +447,7 @@ height: 4rem;
   }
 
   .about__info {
-    margin: 2rem 2rem;
+    margin: 3rem 3rem;
   }
 
   .about__title {
@@ -446,23 +456,20 @@ height: 4rem;
   }
 
   .about__description {
-    font-size: 1.5rem;
-    font-weight: 500;
+    font-size: 1.2rem;
+    font-weight: 200;
   }
 
   .about__icons {
     display: flex;
     justify-content: space-around;
-    width: 95%;
-    margin: 1rem;
-    gap: 2;
+    width: 100%;
+    /* gap: 2; */
   }
 
   .about__icons img {
-    width: 8.5rem;
-    height: 9.5rem;
+    width: 7rem;
   }
-
 
   /** Experience */
   .experience {
@@ -470,23 +477,23 @@ height: 4rem;
     background-color: #1f1d2c;
     padding: 2rem 2rem;
   }
-  
+
   .experience__content {
     margin: 5rem;
     display: flex;
     flex-direction: column;
     text-align: center;
-    gap: 1rem;
+    gap: 1.5rem;
     align-self: flex-start;
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
-  
-  .experience h2 {
-    font-size: 2.7rem;
-    font-weight: 600;
+
+  .experience__title {
+    font-size: 3rem;
+    font-weight: 500;
   }
-  
-  .experience1, 
+
+  .experience1,
   .experience2,
   .experience3 {
     display: flex;
@@ -494,36 +501,46 @@ height: 4rem;
     justify-content: space-between;
     align-items: center;
   }
-  
+
   .experience__description {
     align-self: start;
   }
-  
-  .experience__description span{
-    font-weight: 700;
-    font-size: 1.5rem;
+
+  .experience__description span {
+    font-weight: 600;
+    font-size: 2rem;
   }
-  
-  .experience img {
+
+  .skills__image {
+    border-radius: 1rem;
+    width: 7rem;
+    background-color: #e5e5e5;
+  }
+
+  /* .experience img {
     width: 4rem;
     height: 4rem;
-  }
+  } */
+
   .years {
-      font-size: 1.3rem;
-      font-weight: 600;
+    font-size: 1.3rem;
+    font-weight: 600;
   }
 
   /** Projects */
   .projects {
-    padding: 5rem 20px;
+    background-color: #242635;  
+    padding: 3rem 20px;
   }
 
   .project__content {
-    background-color: #242635;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
+    max-width: max-content;
+    padding: 2rem;
   }
+
   .projects h2 {
     display: flex;
     font-size: 2.5rem;
@@ -531,62 +548,137 @@ height: 4rem;
     justify-content: center;
   }
 
+  .project__container{
+    border-radius: 2rem;
+    box-shadow: 3px 3px 8px #1f1d2c;
+  }
+
   /** Contact */
   .contact {
-    padding: 5rem 20px;
+    padding: 2rem 2rem;
   }
 
   .contact__title {
     display: flex;
     justify-content: center;
-    font-size: 2.5rem;
+    font-size: 3rem;
     font-weight: 600;
   }
 
   .contact__items {
     display: grid;
+    margin: 3rem;
+    padding: 3rem;
+    gap: 2rem;
+    align-content: center;
     grid-template-columns: repeat(2, 1fr);
-    padding-left: 15rem;
+    align-items: center;
+  }
+
+  .contact__form {
+    background-color: #1f1d2c;
+    max-width: 80%;
+    margin-left: 5rem;
+  }
+
+  .header__contact {
+    width: 100%;
+    background-color: #242635;
+    overflow: hidden;
+    color: #f1a600;
+    border-radius: 2rem;
+  }
+
+  .header__image {
+    font-size: 7rem;
+    display: block;
+    text-align: center;
+    padding: 1rem;
+  }
+
+  .form {
+    padding: .8rem;
+    overflow: hidden;
+    color: #e5e5e5;
+  }
+
+  .form label,
+  .form input,
+  .form textarea {
+    display: block;
+    width: 100%;
+    margin-bottom: 8px;
+    border-radius: 0.4rem;
+  }
+
+  .form label {
+    font-weight: 500;
+  }
+
+  .form input:not([type='submit']),
+  .form textarea {
+    border: none;
+    border-bottom: 3px solid #f1a600;
+    margin-bottom: 1rem;
+    font-size: 1rem;
+    outline: none;
+    color: #242635;
+  }
+
+  .form textarea {
+    min-height: 100px;
+  }
+
+  input[type='submit'] {
+    padding: 10px;
+    border: none;
+    background-color: #f1a600;
+    color: #242635;
+    font-size: 1.2rem;
+    cursor: pointer;
+  }
+
+  .contact__icons {
+    width: max-content;
+    align-items: center;
+    text-align: center;
+    margin-left: 3rem;
+    padding: 5rem ;
   }
 
   .phone {
-    display: flex;
-    flex-direction: column;
     width: 8rem;
-    text-align: center;
   }
+
   .mail {
-    display: flex;
-    flex-direction: column;
     width: 8rem;
     text-align: center;
-  } 
-  
+    margin-top: 5rem;
+  }
+
   .phone span {
     font-size: 1rem;
     text-align: center;
     font-weight: 700;
     color: #fff;
   }
-  
+
   .phone p {
-    font-size: 0.7rem; 
-    font-weight: 600;
+    font-size: .8rem;
+    font-weight: 400;
     color: grey;
   }
 
   .mail span {
     font-size: 1rem;
     text-align: center;
-    font-weight: 700;
+    font-weight: 600;
     color: #fff;
   }
   
   .mail p {
-    font-size: 0.7rem; 
-    font-weight: 600;
+    font-size: 0.8rem;
+    font-weight: 400;
     color: grey;
   }
 }
-
-
