--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,8 @@ footer {
   text-align: center;
   margin: 1.5rem;
   font-weight: 600;
-  color: #e5e5e5;
+  color: #f1a600;
+  background-color: #242635;
 }
 
 /** Navbar */
@@ -452,7 +453,6 @@ footer {
     font-weight: 300;
     color: #f1a600;
     font-size: 0.8rem;
-    background-color: #242635;
   }
 }
 
